@@ -1,3 +1,7 @@
+25/05/2022:
+	- Changes to improve logging of timer reporting and addition of std::chrono to Timer.h for supported platforms
+
+
 23/05/2022:
 	- Fix to IIIF.cc to better determine whether a request is for a tile and suitable to be passed to JTL.
 	  Fixes problem identified in: https://github.com/ruven/iipsrv/issues/228
